--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -1,31 +1,48 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="" alt="">
+        </div>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        <div class="item">
+            <img src="" alt="">
+        </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <div class="item">
+            <img src="" alt="">
+        </div>
+
+        <div class="item">
+            <img src="" alt="">
+        </div>
+        <div class="item">
+            <img src="" alt="">
+        </div>
     </div>
 </div>
+    <div class="jumbotron">
+        <h1>MissionConnects</h1>
+        <h3><em>"If ye are prepared ye shall not fear."</em></h3>
+        <h4>Doctrine and Covenants 38:30</h4>
+        <p>Missions may seem scary, but with advice from thousands of missionaries from hundreds of missions around the world, there's no need to worry.</p>
+    </div>
+    <div class="row">
+        <div class="callout-dark text-center fade-in-b">
+            <h1><b>View Missions Now</b><a href="#" class="btn btn-danger">View</a></h1>
+            <p>View questions and answers from hundreds of returned missionaires now</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <p>@Html.ActionLink("Missions", "Index", "Mission", null, new { @class = "btn btn-large btn btn-primary" })</p>
+        </div>
+        <div class="col-md-4">
+            <p>@Html.ActionLink("About Us", "About", "Home", null, new { @class = "btn btn-large btn btn-primary" }) </p>
+        </div>
+        <div class="col-md-4">
+            <p>@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "btn btn-large btn btn-primary" }) </p>
+        </div>
+    </div>
