--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
     <div class="carousel-inner">
         <div class="item active">
-            <img src="" alt="">
+            <img src="~/Content/" alt="">
         </div>
 
         <div class="item">
