Added pics, dropdown, breadcrumbs, call to action, and magic

--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -4,45 +4,44 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
     <div class="carousel-inner">
         <div class="item active">
-            <img src="~/Content/" alt="">
-        </div>
-
-        <div class="item">
-            <img src="" alt="">
-        </div>
-
-        <div class="item">
-            <img src="" alt="">
-        </div>
-
-        <div class="item">
-            <img src="" alt="">
+            <img src="~/Content/social-interaction-missionaries-fellowshipping-1262209-wallpaper.jpg" alt="">
         </div>
         <div class="item">
-            <img src="" alt="">
+            <img src="~/Content/philippines-sister-missionaries-praying-teaching-ridin-1361351-wallpaper.jpg" alt="">
+        </div>
+        <div class="item">
+            <img src="~/Content/romania-missionaries-teaching-man-1312487-wallpaper.jpg" alt="">
+        </div>
+        <div class="item">
+            <img src="~/Content/sister-missionaries-956170-wallpaper.jpg" alt="">
+        </div>
+        <div class="item">
+            <img src="~/Content/romania-missionaries-adults-classroom-talking-1312424-wallpaper.jpg" alt="">
         </div>
     </div>
 </div>
     <div class="jumbotron">
-        <h1>MissionConnects</h1>
-        <h3><em>"If ye are prepared ye shall not fear."</em></h3>
+        <h1>MissionConnections</h1>
+        <h2><em>"If ye are prepared ye shall not fear."</em></h2>
         <h4>Doctrine and Covenants 38:30</h4>
         <p>Missions may seem scary, but with advice from thousands of missionaries from hundreds of missions around the world, there's no need to worry.</p>
     </div>
     <div class="row">
         <div class="callout-dark text-center fade-in-b">
-            <h1><b>View Missions Now</b><a href="#" class="btn btn-danger">View</a></h1>
+            <h1><b>View Missions Now</b><br /><a href="#" class="btn btn-danger">View</a></h1>
             <p>View questions and answers from hundreds of returned missionaires now</p>
         </div>
+        <br />
+        <br />
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="text-align: center">
             <p>@Html.ActionLink("Missions", "Index", "Mission", null, new { @class = "btn btn-large btn btn-primary" })</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="text-align: center">
             <p>@Html.ActionLink("About Us", "About", "Home", null, new { @class = "btn btn-large btn btn-primary" }) </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="text-align: center">
             <p>@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "btn btn-large btn btn-primary" }) </p>
         </div>
     </div>
