Added flags. Broken tho

--- a/Project1/Views/Mission/Detail.cshtml
+++ b/Project1/Views/Mission/Detail.cshtml
@@ -9,7 +9,7 @@
 </ol>
 <h2>@Model.Name Mission</h2>
 <div class="jumbotron">
-    
+    <img src=@Model.FlagURL/>
 </div>
 <table class="table">
     <tr>
