added flags and contact us page

--- a/Project1/Views/Mission/Detail.cshtml
+++ b/Project1/Views/Mission/Detail.cshtml
@@ -9,7 +9,7 @@
 </ol>
 <h2>@Model.Name Mission</h2>
 <div class="jumbotron">
-    <img src=@Model.FlagURL/>
+    <img src=@Model.FlagURL />
 </div>
 <table class="table">
     <tr>
@@ -52,6 +52,21 @@
             @Html.DisplayFor(model => Model.DominateReligion)
         </th>
     </tr>
+
+        @*
+
+        At the very bottom of each dynamically created mission’s FAQ’s will be a question form.
+        The user will be able to fill out this form to post a new question,
+            just like you would post a comment on Facebook.
+        ** For project 1 we will not be posting the questions or saving them in the database,
+            we just want the form to be there and available.
+
+        Under each FAQ question, there will also need to be a way for a user to answer that specific question, 
+            so you will need to add a reply button in order to have a response form dynamically
+            created when a missionary wants to answer another missionary’s question. 
+        You do not need to save the replies for this project.
+
+        *@
 
 
 </table>
