--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -20,19 +20,12 @@
         </div>
     </div>
 </div>
-    <div class="jumbotron">
+    <div class="jumbotron" style="text-align: center">
         <h1>MissionConnections</h1>
         <h2><em>"If ye are prepared ye shall not fear."</em></h2>
         <h4>Doctrine and Covenants 38:30</h4>
         <p>Missions may seem scary, but with advice from thousands of missionaries from hundreds of missions around the world, there's no need to worry.</p>
-    </div>
-    <div class="row">
-        <div class="callout-dark text-center fade-in-b">
-            <h1><b>View Missions Now</b><br /><a href="#" class="btn btn-danger">View</a></h1>
-            <p>View questions and answers from hundreds of returned missionaires now</p>
-        </div>
-        <br />
-        <br />
+        <a class="btn btn-danger btn btn-large"><h3>View Missions Now</h3></a>
     </div>
     <div class="row">
         <div class="col-md-4" style="text-align: center">
