--- a/Project1/Views/Mission/Detail.cshtml
+++ b/Project1/Views/Mission/Detail.cshtml
@@ -56,6 +56,7 @@
 <div class="row" style="text-align: center">
     <h3>FAQ's</h3>
 </div>
+@* Hard coded questions and answers with a reply button that dynamically loads a text box *@
 <div class="row">
     <div class="col-md-6">
         <div class="form-group">
@@ -67,6 +68,7 @@
             <label for="answer">Reply:</label>
             <textarea class="form-control" rows="5" id="answer"></textarea>
             <button type="submit" class="btn btn-default">Submit Reply</button>
+           
         </div>
     </div>
     <div class="col-md-6">
