--- a/Project1/Views/Home/Contact.cshtml
+++ b/Project1/Views/Home/Contact.cshtml
@@ -15,6 +15,8 @@
             Provo, UT 84601<br />
             <abbr title="Phone">P:</abbr>
             (801) 555-5555
+            <abbr title="Email">E:</abbr>
+            admin@missionconnections.com
         </address>
         <form>
             <div class="form-group">
@@ -28,16 +30,16 @@
             <div class="form-group">
                 <label for="subject">Select subject:</label>
                 <select class="form-control" id="subject">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
+                    <option>Technical Problem/Bug</option>
+                    <option>New Feature Request</option>
+                    <option>Other</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="message">Message:</label>
                 <textarea class="form-control" rows="5" id="message"></textarea>
             </div>
+            @* submit button clears the text *@
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
     </div>
