--- a/Project1/Views/Mission/Index.cshtml
+++ b/Project1/Views/Mission/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Project1.Models.Mission>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Missions";
 }
 
-<h2>Index</h2>
+<h2>Missions</h2>
 
 <div class="btn-group">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
