Finished all requirements except for dynamic reply form on the FAQ

--- a/Project1/Views/Home/About.cshtml
+++ b/Project1/Views/Home/About.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>The Story Behind MissionConnections</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Missions are scary--something that we tell lots of people. You're placed in a new location, with a new culture, new people, and sometimes a new language. However, knowing before you go will help you feel comfortable when you get there. Answers from real returned-missionaries will provide candid feedback to help you prepare to serve the best mission you can. Additionally, relying upon information from these RMs will help save money, by reducing unnecessary purchases.</p>
+<h4>With MissionConnections you'll feel comfortable in your mission before you step off the plane.</h4>
