--- a/Project1/Views/Mission/Detail.cshtml
+++ b/Project1/Views/Mission/Detail.cshtml
@@ -115,10 +115,10 @@
                     <form>
                         <div style="display: none" class="form-group">
                             <textarea class="form-control" rows="5"></textarea>
-                            <button onclick="toastr.success('Your reply will be posted once it has been reviewed by MissionConnections moderators. Thanks!','Reply sent!')" type="reset" value="Clear" class="btn btn-success">Submit</button>
+                            <button onclick="toastr.success('Your reply will be posted once it has been reviewed by MissionConnections moderators. Thanks!','Reply sent!')" type="reset" value="Clear" class="submit-button btn-success">Submit</button>
                         </div>
                     </form>
-                    <button type="submit" class="btn btn-primary">Reply</button>
+                    <button type="submit" class="btn btn-primary reply-button">Reply</button>
                 </div>
             </div>
         </div>
@@ -137,10 +137,10 @@
                     <form>
                         <div style="display: none" class="form-group">
                             <textarea class="form-control" rows="5"></textarea>
-                            <button onclick="toastr.success('Your reply will be posted once it has been reviewed by MissionConnections moderators. Thanks!','Reply sent!')" type="reset" value="Clear" class="btn btn-success">Submit</button>
+                            <button onclick="toastr.success('Your reply will be posted once it has been reviewed by MissionConnections moderators. Thanks!','Reply sent!')" type="reset" value="Clear" class="submit-button btn-success">Submit</button>
                         </div>
                     </form>
-                    <button type="submit" class="btn btn-primary">Reply</button>
+                    <button type="submit" class="reply-button btn-primary">Reply</button>
                 </div>
             </div>
         </div>
@@ -159,10 +159,10 @@
                     <form>
                         <div style="display: none" class="form-group">
                             <textarea class="form-control" rows="5"></textarea>
-                            <button onclick="toastr.success('Your reply will be posted once it has been reviewed by MissionConnections moderators. Thanks!','Reply sent!')" type="reset" value="Clear" class="btn btn-success">Submit</button>
+                            <button onclick="toastr.success('Your reply will be posted once it has been reviewed by MissionConnections moderators. Thanks!','Reply sent!')" type="reset" value="Clear" class="submit-button btn-success">Submit</button>
                         </div>
                     </form>
-                    <button type="submit" class="btn btn-primary">Reply</button>
+                    <button type="submit" class="reply-button btn-primary">Reply</button>
                 </div>
             </div>
         </div>
