commented the dang code

--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@* dynamically moving pictures *@
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
     <div class="carousel-inner">
         <div class="item active">
@@ -25,8 +26,10 @@
         <h2><em>"If ye are prepared ye shall not fear."</em></h2>
         <h4>Doctrine and Covenants 38:30</h4>
         <p>Missions may seem scary, but with advice from thousands of missionaries from hundreds of missions around the world, there's no need to worry.</p>
+        @* call to action *@
         <a class="btn btn-danger btn btn-large"><h3>View Missions Now</h3></a>
     </div>
+@* links to rest of website *@
     <div class="row">
         <div class="col-md-4" style="text-align: center">
             <p>@Html.ActionLink("Missions", "Index", "Mission", null, new { @class = "btn btn-large btn btn-primary" })</p>
