Haley and Alison:

--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@* I have have no idea what any of this code does *@
+
+@{
     ViewBag.Title = "Home Page";
 }
 @* dynamically moving pictures *@
